--- a/Exercise 5/Completed/CastMyVote/CastMyVote.iOS/packages.config
+++ b/Exercise 5/Completed/CastMyVote/CastMyVote.iOS/packages.config
@@ -1,15 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Azure.Mobile.Client" version="3.1.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.Azure.Mobile.Client.SQLiteStore" version="3.0.3" targetFramework="xamarinios10" />
+  <package id="Microsoft.Azure.Mobile.Client.SQLiteStore" version="3.1.0" targetFramework="xamarinios10" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="xamarinios10" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="xamarinios10" />
+  <package id="Microsoft.CSharp" version="4.4.0" targetFramework="xamarinios10" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="xamarinios10" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="xamarinios10" />
+  <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="xamarinios10" />
+  <package id="NETStandard.Library" version="2.0.0" targetFramework="xamarinios10" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="xamarinios10" />
   <package id="SQLitePCL" version="3.8.7.2" targetFramework="xamarinios10" />
-  <package id="SQLitePCLRaw.bundle_green" version="1.1.2" targetFramework="xamarinios10" />
-  <package id="SQLitePCLRaw.core" version="1.1.2" targetFramework="xamarinios10" />
-  <package id="SQLitePCLRaw.provider.sqlite3.ios_unified" version="1.1.2" targetFramework="xamarinios10" />
-  <package id="Xam.Plugin.Connectivity" version="2.3.0" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="2.3.3.193" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.1.8" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.core" version="1.1.8" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.provider.sqlite3.ios_unified" version="1.1.8" targetFramework="xamarinios10" />
+  <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="Xam.Plugin.Connectivity" version="3.0.3" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="2.4.0.282" targetFramework="xamarinios10" />
 </packages>
