--- a/MVVM/CastMyVote/CastMyVote.Droid/packages.config
+++ b/MVVM/CastMyVote/CastMyVote.Droid/packages.config
@@ -4,23 +4,38 @@
   <package id="Microsoft.Azure.Mobile.Client.SQLiteStore" version="3.1.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="monoandroid60" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="monoandroid60" />
+  <package id="Microsoft.CSharp" version="4.4.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="monoandroid60" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid60" />
+  <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="monoandroid71" />
+  <package id="NETStandard.Library" version="2.0.0" targetFramework="monoandroid71" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="monoandroid71" />
   <package id="SQLitePCL" version="3.8.7.2" targetFramework="monoandroid60" />
-  <package id="SQLitePCLRaw.bundle_green" version="1.1.2" targetFramework="monoandroid60" />
-  <package id="SQLitePCLRaw.core" version="1.1.2" targetFramework="monoandroid60" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.1.2" targetFramework="monoandroid60" />
-  <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.1.2" targetFramework="monoandroid60" />
-  <package id="Xam.Plugin.Connectivity" version="2.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.v7.AppCompat" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.v7.CardView" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.Forms" version="2.3.3.193" targetFramework="monoandroid71" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.1.8" targetFramework="monoandroid71" />
+  <package id="SQLitePCLRaw.core" version="1.1.8" targetFramework="monoandroid71" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.1.8" targetFramework="monoandroid71" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.1.8" targetFramework="monoandroid71" />
+  <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="Xam.Plugin.Connectivity" version="3.0.3" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Annotations" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Compat" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Core.UI" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Core.Utils" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Design" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Fragment" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Media.Compat" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Transition" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v4" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.CardView" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.MediaRouter" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.Palette" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Forms" version="2.4.0.282" targetFramework="monoandroid71" />
   <package id="XamarinUniversity.Core" version="1.0.161128" targetFramework="monoandroid60" />
-  <package id="XamarinUniversity.Infrastructure" version="1.0.161201" targetFramework="monoandroid60" />
+  <package id="XamarinUniversity.Infrastructure" version="1.0.170620" targetFramework="monoandroid71" />
 </packages>
